name:                CabbageDown
version:             0.1.0.0
synopsis:            Test cabbage with a non-base dependency
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable CabbageDown
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, TestCabbage, colour
  -- hs-source-dirs:      
  default-language:    Haskell2010