name:                TestCabbage
version:             0.1.0.0
synopsis:            Test package for Nix+Cabal packages
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     TestCabbage
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.9, array
  -- hs-source-dirs:      
  default-language:    Haskell2010